<resources>
    <string name="app_name">PamerApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">SignIn</string>
    <string name="already_registered">Not have an account? Signup Here</string>
    <string name="title_login">User Login</string>
    <string name="panel_principal">PANEL PRINCIPAL</string>
    <string name="text_view_email">Email: </string>
    <string name="text_view_id">ID: </string>
    <string name="btn_logout">LogOut</string>
    <string name="mensaje_bienvenida">Bienvenido a PAMER, puedes iniciar sesion con tu cuenta corporativa, Google o Facebook!</string>
    <string name="button_comenzar">COMENZAR</string>
    <string name="message_login_dialog">Autentificate e ingresa a conocernos..</string>
    <string name="positive_btn_login_dialog">Aceptar</string>
    <string name="negative_btn_login_dialog">Cancelar</string>


    <string name="email">Email</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>
    <string name="conocenos">Conocenos</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="facebook_app_id">125266978104861</string>
    <string name="fb_login_protocol_scheme">fb125266978104861</string>


    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_nav_drawer_sign_in">NavDrawerSignInActivity</string>
    <string name="title_activity_tabbed_etis">Evaluaciones</string>
    <string name="section_format">EVALUACIONES BIMESTRE %1$d</string>
    <string name="title_activity_detalle_etis">DetalleEtisActivity</string>

    <string name="descriptHome">Descripcion</string>
    <string name="logout_dialog_message">La sesión va a finalizar.</string>
    <string name="logout_dialog_question">¿Desea continuar?</string>
    <string name="logout_dialog_si">SI</string>
    <string name="logout_dialog_no">NO</string>
    <string name="backpressed_dialog_message">¿Está seguro que desea salir de la aplicación?</string>
    <string name="backpressed_dialog_ok">OK</string>
    <string name="backpressed_dialog_cancel">CANCEL</string>
</resources>
